styles and settingsm
WIP new theme skeleton

--- a/blog.html
+++ b/blog.html
@@ -2,9 +2,14 @@
 layout: default
 title: Quality Yacht Services
 description: Prudent Mariners is your source for quality sailboat rigging and electrical work
-featured_image: /images/wave.jpg
+featured_image: /images/spinnaker.jpg
 ---
 
+pants
+{% puts paginator.inspect %}
+{% if paginator.posts %}
+yup
+{% endif %}
 <section class="blog single">
 
 	<div class="wrap">
